# rtx

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
.codegraph/: daemon.pid
rtx/: cli.py  digger.py  pipeline.py  tui.py  writer.py
rtx/parsers/: __init__.py  base.py  code.py  csv.py  docx.py  ebook.py  pdf.py  pptx.py  text.py  xlsx.py
tests/: conftest.py  test_cli.py  test_coverage.py  test_digger.py  test_parsers.py  test_pipeline.py  test_tui.py  test_writer.py
