[project]
name = "rtx"
version = "0.1.0"
description = "Universal Workspace Parser & Context Gatherer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ebooklib>=0.20",
    "marker-pdf>=1.10.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "pyperclip>=1.11.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "rich>=15.0.0",
    "textual>=8.2.7",
    "typer>=0.26.7",
]

[project.scripts]
rtx = "rtx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["rtx"]
